APPS-2239 fix layout issues related to fullscreen

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
@@ -956,6 +956,7 @@
 		-webkit-user-select: none;
 		-ms-user-select: none;
 		user-select: none;
+		will-change: transform;
 	}
 
 	.VerticalSeparator {
