--- a/web/src/main/resources/org/geogebra/web/resources/scss/layout.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/layout.scss
@@ -246,5 +246,9 @@ $collapse-trans: all 0.2s ease;
 	.mowColorPlusButton img {
 		padding: 3px;
 	}
+
+	.matDynStyleBar {
+		will-change: transform;
+	}
  }
 
